--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
           <configLocation>com/github/ngeor/checkstyle.xml</configLocation>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <skip>${skipTests}</skip>
+          <failOnViolation>false</failOnViolation>
         </configuration>
         <executions>
           <execution>
